layout bugs

--- a/src/MyTeam/Assets/Stylesheets/Views/layout.less
+++ b/src/MyTeam/Assets/Stylesheets/Views/layout.less
@@ -264,11 +264,16 @@ div[mt-sidebar] {
     display: inline-block;
 
     .r-under-xs( {
-        height: 38px;
+        height: 34px;
         margin-right: 15px;
     }
 
     );
+}
+
+.navbar-topRight--item.navbar-nav li {
+    height: 100%;
+    a{height: 100%;}
 }
 
 
